<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/labelStyle"
        android:text="@string/all_albums_detail" />

    <TextView
        android:id="@+id/album1"
        style="@style/textfieldStyle"
        android:text="@string/yeh_jawaani_hai_deewani" />

    <TextView
        android:id="@+id/album2"
        style="@style/textfieldStyle"
        android:text="@string/rustom" />

    <TextView
        android:id="@+id/album3"
        style="@style/textfieldStyle"
        android:text="@string/insomniac" />

    <TextView
        android:id="@+id/album4"
        style="@style/textfieldStyle"
        android:text="@string/the_final_countdown" />

    <TextView
        android:id="@+id/album5"
        style="@style/textfieldStyle"
        android:text="@string/ajab_prem_ki_ghazab_kahani" />

    <Button
        android:id="@+id/playing"
        style="@style/buttonStyle" />

</LinearLayout>