<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/labelStyle"
        android:text="@string/all_artists_detail" />

    <TextView
        android:id="@+id/artist1"
        style="@style/textfieldStyle"
        android:text="@string/a_r_rahman" />

    <TextView
        android:id="@+id/artist2"
        style="@style/textfieldStyle"
        android:text="@string/alisha_chinoy" />

    <TextView
        android:id="@+id/artist3"
        style="@style/textfieldStyle"
        android:text="@string/shankar_mahadevan" />

    <Button
        android:id="@+id/playing"
        style="@style/buttonStyle" />

</LinearLayout>